fix: height on tablet dimensions

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -181,7 +181,7 @@ It unfortunately also means we're limited to 5 tabs at current.
 .tabbed [type="radio"]:nth-of-type(3):checked ~ .tab-content:nth-of-type(3),
 .tabbed [type="radio"]:nth-of-type(4):checked ~ .tab-content:nth-of-type(4),
 .tabbed [type="radio"]:nth-of-type(5):checked ~ .tab-content:nth-of-type(5) {
-	@apply block bg-card-light flex content-center md:h-96;
+	@apply block bg-card-light flex content-center lg:h-96;
 }
 
 #meta-slider {
